--- a/src/stylesheets/components/_project-detail.scss
+++ b/src/stylesheets/components/_project-detail.scss
@@ -137,3 +137,72 @@ $desktop-space: 6rem;
         padding: 1.5rem 6rem;
     }
 }
+
+.project-detail__store-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media(min-width: $screen-md) {
+        flex-direction: row;
+    }
+}
+
+.project-detail__store-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    width: 230px;
+    max-height: 60px;
+    box-sizing: border-box;
+
+    @media(min-width: $screen-lg) {
+        padding: 1.5rem 2rem;
+        width: 300px;
+    }
+}
+
+.project-detail__store-button--play-store {
+    background: $gray-fa;
+    box-shadow: inset 3px 2px 13px rgba($black, 0.1);
+
+    @media(min-width: $screen-md) {
+        margin-right: 1rem;
+    }
+}
+
+.project-detail__store-button--app-store {
+    background: $app-store-gradient;
+    box-shadow: inset 3px 2px 13px rgba($black, 0.3);
+}
+
+.project-detail__store-button-content {
+    @include font-size(13px);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: $font-weight-semibold;
+
+    @media(min-width: $screen-lg) {
+        @include font-size(18px);
+    }
+}
+
+.project-detail__store-button-content--play-store {
+    color: $black;
+    text-shadow: 0 2px 4px rgba($black, 0.1);
+}
+
+.project-detail__store-button-content--app-store {
+    color: $white;
+    text-shadow: $app-store-text-shadow;
+}
+
+.project-detail__store-icon {
+    width: auto;
+    height: 32px;
+}
