Fixed store buttons

--- a/src/stylesheets/components/_project-detail.scss
+++ b/src/stylesheets/components/_project-detail.scss
@@ -8,201 +8,198 @@ $desktop-space: 6rem;
     justify-content: center;
 }
 
-.project-detail__header {
-    @extend %wrapper;
+    .project-detail__header {
+        @extend %wrapper;
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 3rem 0 0;
-    width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 3rem 0 0;
+        width: 100%;
 
-    @media(min-width: $screen-lg) {
-        @include font-size(36px);
+        @media(min-width: $screen-lg) {
+            @include font-size(36px);
 
-        margin: 8rem 0 4rem;
+            margin: 8rem 0 4rem;
+        }
     }
-}
 
-.project-detail__title {
-    @include font-size(18px);
-
-    margin-bottom: 1rem;
-    color: $black;
-    font-weight: $font-weight-normal;
-
-    @media(min-width: $screen-lg) {
-        @include font-size(36px);
-    }
-}
-
-.project-detail__type {
-    @include font-size(18px);
-
-    margin-bottom: $mobile-space;
-    color: $gray-97;
-
-    @media(min-width: $screen-lg) {
-        @include font-size(36px);
-    }
-}
-
-.project-detail__element {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.project-detail__image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: $mobile-space;
-    width: 100%;
-    height: auto;
-
-    @media(min-width: $screen-xl) {
-        margin-bottom: $desktop-space;
-        max-width: 990px;
-    }
-}
-
-.project-details__description {
-    @extend %wrapper;
-    @include font-size(13px);
-
-    margin: 0 0 $mobile-space;
-    line-height: 25px;
-
-    @media(min-width: $screen-lg) {
+    .project-detail__title {
         @include font-size(18px);
 
-        margin-bottom: $desktop-space;
-        line-height: 35px;
+        margin-bottom: 1rem;
+        color: $black;
+        font-weight: $font-weight-normal;
+
+        @media(min-width: $screen-lg) {
+            @include font-size(36px);
+        }
     }
-}
 
-.project-detail__screen-captures {
-    margin: 0 0 $mobile-space;
-    width: 100%;
-    height: 500px;
-
-    @media(min-width: $screen-xl) {
-        margin-bottom: $desktop-space;
-        max-width: 990px;
-    }
-}
-
-.project-detail__more-info {
-    @extend %wrapper;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    @media(min-width: $screen-lg) {
-        margin-bottom: $desktop-space;
-    }
-}
-
-.project-detail__see-this {
-    @include font-size(15px);
-
-    color: $gray-97;
-
-    @media(min-width: $screen-lg) {
-        @include font-size(24px);
-    }
-}
-
-.project-detail__see-this--dark {
-    color: $black;
-}
-
-.project-detail__access-website {
-    @include font-size(13px);
-
-    margin-top: 1rem;
-    padding: 1rem 4rem;
-    color: $white;
-    font-weight: $font-weight-semibold;
-    text-shadow: 0 2px 4px $primary-shadow;
-    background: $primary;
-    box-shadow: inset 2px 2px 8px $primary-shadow;
-
-    @media(min-width: $screen-lg) {
+    .project-detail__type {
         @include font-size(18px);
 
-        padding: 1.5rem 6rem;
+        margin-bottom: $mobile-space;
+        color: $gray-97;
+
+        @media(min-width: $screen-lg) {
+            @include font-size(36px);
+        }
     }
-}
 
-.project-detail__store-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    @media(min-width: $screen-md) {
-        flex-direction: row;
+    .project-detail__element {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
-}
 
-.project-detail__store-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    width: 230px;
-    max-height: 60px;
-    box-sizing: border-box;
+    .project-detail__image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: $mobile-space;
+        width: 100%;
+        height: auto;
 
-    @media(min-width: $screen-lg) {
-        padding: 1.5rem 2rem;
-        width: 300px;
+        @media(min-width: $screen-xl) {
+            margin-bottom: $desktop-space;
+            max-width: 990px;
+        }
     }
-}
 
-.project-detail__store-button--play-store {
-    background: $gray-fa;
-    box-shadow: inset 3px 2px 13px rgba($black, 0.1);
+    .project-details__description {
+        @extend %wrapper;
+        @include font-size(13px);
 
-    @media(min-width: $screen-md) {
-        margin-right: 1rem;
+        margin: 0 0 $mobile-space;
+        line-height: 25px;
+
+        @media(min-width: $screen-lg) {
+            @include font-size(18px);
+
+            margin-bottom: $desktop-space;
+            line-height: 35px;
+        }
     }
-}
 
-.project-detail__store-button--app-store {
-    background: $app-store-gradient;
-    box-shadow: inset 3px 2px 13px rgba($black, 0.3);
-}
+    .project-detail__screen-captures {
+        margin: 0 0 $mobile-space;
+        width: 100%;
+        height: 500px;
 
-.project-detail__store-button-content {
-    @include font-size(13px);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: $font-weight-semibold;
-
-    @media(min-width: $screen-lg) {
-        @include font-size(18px);
+        @media(min-width: $screen-xl) {
+            margin-bottom: $desktop-space;
+            max-width: 990px;
+        }
     }
-}
 
-.project-detail__store-button-content--play-store {
-    color: $black;
-    text-shadow: 0 2px 4px rgba($black, 0.1);
-}
+    .project-detail__more-info {
+        @extend %wrapper;
 
-.project-detail__store-button-content--app-store {
-    color: $white;
-    text-shadow: $app-store-text-shadow;
-}
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-.project-detail__store-icon {
-    width: auto;
-    height: 32px;
-}
+        @media(min-width: $screen-lg) {
+            margin-bottom: $desktop-space;
+        }
+    }
+
+    .project-detail__see-this {
+        @include font-size(15px);
+
+        color: $gray-97;
+
+        @media(min-width: $screen-lg) {
+            @include font-size(24px);
+        }
+    }
+
+    .project-detail__see-this--dark {
+        color: $black;
+    }
+
+    .project-detail__access-website {
+        @include font-size(13px);
+
+        margin-top: 1rem;
+        padding: 1rem 4rem;
+        color: $white;
+        font-weight: $font-weight-semibold;
+        text-shadow: 0 2px 4px $primary-shadow;
+        background: $primary;
+        box-shadow: inset 2px 2px 8px $primary-shadow;
+
+        @media(min-width: $screen-lg) {
+            @include font-size(18px);
+
+            padding: 1.5rem 6rem;
+        }
+    }
+
+    .project-detail__store-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        @media(min-width: $screen-md) {
+            flex-direction: row;
+        }
+    }
+
+    .project-detail__store-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 1rem;
+        padding: 0.5rem 1rem;
+        width: 230px;
+        max-height: 60px;
+        box-sizing: border-box;
+
+        @media(min-width: $screen-lg) {
+            padding: 1.5rem 2rem;
+            width: 300px;
+        }
+    }
+
+    .project-detail__store-button--play-store {
+        background: $gray-fa;
+        box-shadow: inset 3px 2px 13px rgba($black, 0.1);
+
+        @media(min-width: $screen-md) {
+            margin-right: 1rem;
+        }
+    }
+
+    .project-detail__store-button--app-store {
+        background: $app-store-gradient;
+        box-shadow: inset 3px 2px 13px rgba($black, 0.3);
+    }
+
+        .project-detail__store-text {
+            @include font-size(13px);
+            margin-left: 0.5rem;
+            font-weight: $font-weight-semibold;
+
+            @media(min-width: $screen-lg) {
+                @include font-size(18px);
+            }
+        }
+
+        .project-detail__store-text--play-store {
+            color: $black;
+            text-shadow: 0 2px 4px rgba($black, 0.1);
+        }
+
+        .project-detail__store-text--app-store {
+            color: $white;
+            text-shadow: $app-store-text-shadow;
+        }
+
+        .project-detail__store-icon {
+            width: auto;
+            height: 32px;
+        }
